--- a/next-js-training/package.json
+++ b/next-js-training/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.435.0",
     "next": "14.2.5",
