--- a/next-js-training/package.json
+++ b/next-js-training/package.json
@@ -14,11 +14,13 @@
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.435.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
