--- a/next-js-training/package.json
+++ b/next-js-training/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.20.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.435.0",
@@ -43,5 +44,10 @@
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
