--- a/next-js-training/package.json
+++ b/next-js-training/package.json
@@ -22,6 +22,8 @@
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "next-cloudinary": "^6.13.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
